--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
+    "@angular/material": "^13.3.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@syncfusion/ej2-angular-calendars": "^19.4.56",
+    "chart.js": "^3.6.0",
+    "ng2-charts": "^3.0.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
