--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,24 +1,24 @@
 version: 0.2
 
 env:
-    variables:
-        CACHE_CONTROL: "86400"
-        S3_BUCKET: "{{s3_bucket_url}}"
-        BUILD_FOLDER: "dist"
+  variables:
+    CACHE_CONTROL: "86400"
+    S3_BUCKET: "{{s3_bucket_url}}"
+    BUILD_FOLDER: "dist"
 phases:
   install:
     runtime-versions:
-        nodejs: 14
+      nodejs: 14
     commands:
-        - echo Installing source NPM dependencies...
-        - npm install
-        - npm install -g @angular/cli
+      - echo Installing source NPM dependencies...
+      - npm install
+      - npm install -g @angular/cli
   build:
     commands:
-        - echo Build started 
-        - ng build
+      - echo Build started
+      - ng build --configuration=production
 artifacts:
-    files:
-        - '**/*'
-    base-directory: 'dist*'
-    discard-paths: yes
+  files:
+    - "**/*"
+  base-directory: "dist*"
+  discard-paths: yes
