--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
   build:
     commands:
       - echo Build started
-      - CI= ng run build
+      - ng build
 artifacts:
   files:
     - "**/*"
