--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
       nodejs: 14
     commands:
       - echo Installing source NPM dependencies...
-      - npm install
+      - npm i -f
       - npm install -g @angular/cli
   build:
     commands:
