--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
       nodejs: 14
     commands:
       - echo Installing source NPM dependencies...
-      - npm i -f
+      - npm install -f
       - npm install -g @angular/cli
       - rm package-lock.json
     pre_build:
