--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,24 +1,24 @@
 version: 0.2
-
 env:
   variables:
-    CACHE_CONTROL: "86400"
-    S3_BUCKET: "{{s3_bucket_url}}"
-    BUILD_FOLDER: "dist"
+    S3_BUCKET: "cv.schreck.berlin"
 phases:
   install:
     runtime-versions:
       nodejs: 14
+  pre_build:
     commands:
       - echo Installing source NPM dependencies...
-      - npm install -f
-      - npm install -g @angular/cli
-      - rm package-lock.json
       - npm install
+      - npm install -g @angular/cli
   build:
     commands:
-      - echo Build started
-      - ng build --prod
+      - echo Build started on `date`
+      - ng build --prod --aot
+  post_build:
+    commands:
+      - aws s3 cp dist s3://${S3_BUCKET} --recursive
+      - echo Build completed on `date`
 artifacts:
   files:
     - "**/*"
